src/test/deca/syntax/valid/test_dir/added/parser/comments_with_inst.deca
{
  // This is a comment
  /* multi
  line
  comment */

  print(i);

  // This is a comment
  /* multi
  line
  comment */
}
