src/test/deca/syntax/invalid/parser/oracle/multi_string_block_printlnx.deca
{
	printlnx("Comment multi line
	not possible in block");
}